--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "الــــكـــنـــيــســة",
-  "short_name": "ترانيم وكتاب وخدمة",
-  "description": "تطبيق لعرض الترانيم، الكتاب المقدس النصي والمسموع، وإدارة الخدمات الكنسية مع دعم التشغيل بدون إنترنت",
+  "name": "الكنيسة - ترانيم وكتاب مقدس",
+  "short_name": "الكنيسة",
+  "description": "تطبيق لعرض الترانيم الكنسية، الكتاب المقدس النصي والمسموع، وإدارة الخدمات الكنسية مع دعم التشغيل بدون إنترنت",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
@@ -32,5 +32,7 @@
       "type": "image/png",
       "form_factor": "narrow"
     }
-  ]
+  ],
+  "lang": "ar",
+  "dir": "rtl"
 }
