--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "الكنيسة - ترانيم وكتاب مقدس",
+  "name": "الكنيسة",
   "short_name": "الكنيسة",
   "description": "تطبيق لعرض الترانيم الكنسية، الكتاب المقدس النصي والمسموع، وإدارة الخدمات الكنسية مع دعم التشغيل بدون إنترنت",
   "start_url": "/",
