--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "الكنيسة",
-  "short_name": "الكنيسة",
-  "description": "تطبيق لعرض الترانيم الكنسية، الكتاب المقدس النصي والمسموع، وإدارة الخدمات الكنسية مع دعم التشغيل بدون إنترنت",
+  "name": "تطبيق الكنيسة",
+  "short_name": "تطبيق الكنيسة",
+  "description": "تطبيق الكنيسة لعرض الترانيم الكنسية، الكتاب المقدس النصي والمسموع، وإدارة الخدمات الكنسية مع دعم التشغيل بدون إنترنت",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
